--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="This portfolio shows all my projects" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Preye Ifidi</title>
+    <title>Front-end developer - Preye Ifidi</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
