--- a/index.html
+++ b/index.html
@@ -55,8 +55,15 @@
     <h1 class="text-center">Preye Ifidi</h1>
     <h3 class="text-center">NG Front-end developer, based in Nigeria</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a
+        href="about.html#contact"
+        title="Contact Preye Ifidi"
+        class="primary-link"
+        >Contact me</a
+      >
+      <a href="about.html" title="About Preye Ifidi" class="secondary-link"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
