--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            alt="Yoga image"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -79,7 +83,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Yoga project"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -93,16 +99,26 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Weather project"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            alt="Weather image"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            alt="Yogurt image"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -113,7 +129,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+            <a href="#" class="primary-link" title="Yogurt project"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
