included css media queries

--- a/index.html
+++ b/index.html
@@ -42,10 +42,17 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="About Preye Ifidi"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact Preye Ifidi"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -71,7 +78,7 @@
           <img
             src="images/yoga.png"
             alt="Yoga image"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-md-block"
           />
         </div>
         <div class="col-md-6">
@@ -108,18 +115,21 @@
           <img
             src="images/weather.png"
             alt="Weather image"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-md-block"
           />
         </div>
       </div>
+
       <div class="row mt-5">
         <div class="col-md-6">
           <img
             src="images/yogurt.png"
             alt="Yogurt image"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-md-block"
           />
+          <div class="mb-4"></div>
         </div>
+
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
